// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-open-with/MultipleIntegrationsOpenWithButton should pass down props to the button 1`] = `
<Tooltip
  position="middle-left"
  text={
    <FormattedMessage
      defaultMessage="Open this file with a partner service"
      id="be.defaultOpenWithDescription"
    />
  }
>
  <Button
    className=""
    data-testid="multipleintegrationsbutton"
    isLoading={false}
    showRadar={false}
    type="submit"
    width={50}
  >
    <MenuToggle>
      <OpenWithButtonContents>
        <IconOpenWith
          className="bcow-integration-icon"
          dimension={26}
          height={26}
          width={26}
        />
      </OpenWithButtonContents>
    </MenuToggle>
  </Button>
</Tooltip>
`;

exports[`elements/content-open-with/MultipleIntegrationsOpenWithButton should render button 1`] = `
<Tooltip
  position="middle-left"
  text={
    <FormattedMessage
      defaultMessage="Open this file with a partner service"
      id="be.defaultOpenWithDescription"
    />
  }
>
  <Button
    className=""
    data-testid="multipleintegrationsbutton"
    isLoading={false}
    showRadar={false}
    type="submit"
  >
    <MenuToggle>
      <OpenWithButtonContents>
        <IconOpenWith
          className="bcow-integration-icon"
          dimension={26}
          height={26}
          width={26}
        />
      </OpenWithButtonContents>
    </MenuToggle>
  </Button>
</Tooltip>
`;
